@@ -3,6 +3,7 @@ fpac (3.27.19)
 	* Moved the help files from /etc/ax25/fpac/help to /var/ax25/fpac/help 
 	  for better policy compliance and less security risk
 	* Added some of Charley's scripts: ax25, ax25-up, ax25-down, ax25parms
+	* Remove the obsolete mkissattach code (and kiss folder)
 
  -- Lee Woldanski <ve7fet@tparc.org> Sat, 17 Sep 2011 22:00:00 -0800
 
